<resources>
    <string name="app_name">NeverNote</string>
    <string name="sort_options_menu">Sort</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="settings_user_name">User Name</string>
    <string name="title_activity_settings">Settings Activity</string>
    <string name="settings_header">Settings</string>
    <string name="settings_account_info">Account Info</string>
    <string name="settings_notifications">Notifications</string>
    <string name="settings_camera">Camera</string>
    <string name="settings_notes">Notes</string>
    <string name="login_button">Login</string>
    <string name="signup_button">Sign Up</string>
    <string name="email_hint">Email ID</string>
    <string name="password_hint">Password</string>
    <string name="sign_out">Sign Out</string>
    <string name="all_notes">All notes</string>
    <string name="trash">Trash</string>
    <string name="completed">Completed</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="about_header">About</string>
    <string name="about_support">Support</string>
    <string name="about_legal">Legal</string>
    <string name="delete">Delete</string>
    <string name="welcome">Welcome</string>
    <string name="register_button">Register</string>
    <string name="no_account_text">DON\'T HAVE AN ACCOUNT</string>
    <string name="or">or</string>
    <string name="untitled_note">Untitled Text</string>
    <string name="alreday_have_an_account">Already have an account?</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="map_view">Map</string>
    <string name="title_activity_trash">Trash</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
</resources>