<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/all_notes"
            android:icon="@drawable/all_notes"
            android:title="@string/all_notes" />
        <item
            android:id="@+id/trash"
            android:icon="@drawable/delete"
            android:title="@string/trash" />
        <item
            android:id="@+id/completed"
            android:icon="@drawable/completed"
            android:title="@string/completed" />
        <item
            android:id="@+id/sign_out"
            android:title="@string/sign_out" />
    </group>
</menu>
