<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity"
    android:background="@color/login_signup_background_color">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/close_signup_screen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:tint="@color/login_signup_text_color"
            android:src="@drawable/ic_close_black_24dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@id/login_logo"/>

        <ImageView
            android:id="@+id/login_logo"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="40dp"
            android:tint="@color/white"
            android:src="@drawable/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/signup_email_id_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="50dp"
            android:padding="5dp"
            android:focusableInTouchMode="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_logo">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_account_box_black_24dp"
                android:tint="@color/login_signup_text_color"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/signup_email_id_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:backgroundTint="@color/login_signup_text_color"
                android:textColorHint="@color/login_signup_text_color">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/signup_email_id_text_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_hint"
                    android:backgroundTint="@color/login_signup_background_color"
                    android:textColorHint="@color/login_signup_text_color"
                    android:textSize="14dp"
                    android:textColor="@color/white"
                    android:maxLines="1"
                    android:inputType="textEmailAddress"
                    android:textCursorDrawable="@null"/>
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/signup_password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:padding="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/signup_email_id_layout">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_password_black_24dp"
                android:tint="@color/login_signup_text_color"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/signup_password_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:backgroundTint="@color/login_signup_text_color"
                android:textColorHint="@color/login_signup_text_color"
                app:passwordToggleEnabled="true">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/signup_password_text_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password_hint"
                    android:inputType="textPassword"
                    android:textColorHint="@color/login_signup_text_color"
                    android:backgroundTint="@color/login_signup_background_color"
                    android:textColor="@color/white"
                    android:textSize="14dp"
                    android:maxLines="1"
                    app:passwordToggleTint="@color/login_signup_text_color"
                    android:textCursorDrawable="@null"/>
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/signup_confirm_password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:padding="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/signup_password_layout">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_password_black_24dp"
                android:tint="@color/login_signup_text_color"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/signup_confirm_password_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:backgroundTint="@color/login_signup_text_color"
                android:textColorHint="@color/login_signup_text_color"
                app:passwordToggleEnabled="true">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/signup_confirm_password_text_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirm_password_hint"
                    android:inputType="textPassword"
                    android:textColorHint="@color/login_signup_text_color"
                    android:backgroundTint="@color/login_signup_background_color"
                    android:textColor="@color/white"
                    android:textSize="14dp"
                    android:maxLines="1"
                    app:passwordToggleTint="@color/login_signup_text_color"
                    android:textCursorDrawable="@null"/>
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <Button
            android:id="@+id/signup_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="40dp"
            android:text="@string/signup_button"
            android:textSize="14sp"
            android:elevation="10sp"
            android:textColor="@color/black"
            android:background="@drawable/button_ripple_effect"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signup_confirm_password_layout" />

    </android.support.constraint.ConstraintLayout>


</ScrollView>